--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,13 +1,11 @@
 * { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; color: #212121; }
-*.monospace { font-family: 'Roboto Mono', monospace; }
+*::selection { background: #9dcd17; }
 html { scroll-behavior: smooth; font-size: 16px; }
-nav { position: sticky; top: 0; background-color: #fefefe; z-index: 1; }
-h1 { margin-top: 0 !important; }
-article { width: 300px; }
-p { padding-bottom: 0.5rem; }
-#logo { height: 12rem; width: 12rem; }
-#products ul { columns: 3 180px; column-gap: 3rem; }
-#products li { white-space: pre-line; width: 180px; padding-bottom: 0.5rem; }
-#contact img { height: 1rem; width: 1rem; }
-#contact a { padding-bottom: 0.5rem; }
+#nav { position: sticky; top: 0; background: #fefefe; z-index: 1; }
 #map img { height: 32rem; object-fit: none; object-position: center; }
+#logo { height: 12rem; width: 12rem; }
+.three-column { columns: 3 20rem; column-gap: 3rem; }
+.icone { height: 1rem; width: 1rem; margin-right: 0.5rem; }
+ul { list-style-position: inside; }
+.x { max-width: calc(3 * 300px); }
+#infos { display: grid; grid-template-columns: repeat(auto-fill, 300px); }
